--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="<%= BASE_URL %>baeb.png">
+    <title>COxOK</title>
     <script src="https://kit.fontawesome.com/2ecf91688f.js" crossorigin="anonymous"></script>
 
     <!-- 주소 검색 API... 위치 확인할 것 -->
