FIX some bugs / CHANGE some design

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>CO_OK-logo.png">
-    <title>COxOK</title>
+    <title>CO~OK</title>
     <script src="https://kit.fontawesome.com/2ecf91688f.js" crossorigin="anonymous"></script>
 
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
