FIX bug and TEST

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>CO_OK-logo.png">
+    <link rel="icon" href="<%= BASE_URL %>CO_OK-logo.svg">
     <title>CO~OK</title>
     <script src="https://kit.fontawesome.com/2ecf91688f.js" crossorigin="anonymous"></script>
 
